--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,35 @@
----
-version: '2'
+version: "3"
+
+# https://github.com/pi-hole/docker-pi-hole/blob/master/README.md
+
 services:
-  homeassistant:
-    container_name: pi-hole
-    image: pihole/pihole
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:latest
+    # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
     ports:
       - "53:53/tcp"
       - "53:53/udp"
       - "67:67/udp"
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ${PATH_PIHOLE}:/etc/pihole
-      - ${PATH_DNSMASQ}:/etc/dnsmasq.d/
+      - "80:80/tcp"
+      - "443:443/tcp"
     environment:
-      - TZ=${TZ}
-      - ServerIP=${IP_ADDRESS}
-      - WEBPASSWORD=${WEBPASSWORD}
+      TZ:${TZ}
+      # WEBPASSWORD: 'set a secure password here or it will be random'
+      ServerIP=${IP_ADDRESS}
+    # Volumes store your data between container upgrades
+    volumes:
+       - ${PATH_PIHOLE}:/etc/pihole/
+       - ${PATH_DNSMASQ}./etc-dnsmasq.d/:/etc/dnsmasq.d/
+    # run `touch ./var-log/pihole.log` first unless you like errors
+    # - './var-log/pihole.log:/var/log/pihole.log'
+    dns:
+      - 127.0.0.1
+      - 1.1.1.1
+    # Recommended but not required (DHCP needs NET_ADMIN)
+    #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+    cap_add:
+      - NET_ADMIN
     restart: unless-stopped
     networks:
       local:
