--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "443:443/tcp"
     environment:
       TZ:${TZ}
-      # WEBPASSWORD: 'set a secure password here or it will be random'
+      # WEBPASSWORD: 'set a secure password here or it will be random"
       ServerIP=${IP_ADDRESS}
     # Volumes store your data between container upgrades
     volumes:
