--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,20 @@
----
-version: '2'
+version: "3"
 services:
-  homeassistant:
-    container_name: pi-hole
-    image: pihole/pihole
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:latest
     ports:
       - "53:53/tcp"
       - "53:53/udp"
       - "67:67/udp"
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ${PATH_PIHOLE}:/etc/pihole
-      - ${PATH_DNSMASQ}:/etc/dnsmasq.d/
+      - "2052:80/tcp"
+      - "2053:443/tcp"
     environment:
-      - TZ=${TZ}
-      - ServerIP=${IP_ADDRESS}
+      - DNS1=127.0.0.1
+      - DNS2=1.1.1.1
       - WEBPASSWORD=${WEBPASSWORD}
+    volumes:
+      - ${CONFIG}:/etc/pihole
+      - ${DNSMASQ}:/etc/dnsmasq.d
+      - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
-    networks:
-      local:
-        ipv4_address: ${IP_ADDRESS}
-networks:
-  local:
-    external:
-      name: local
